# bci-speller

./: .env.example  .gitignore  MANUAL.md  README.md  local.env.example  pyproject.toml
src/bci/: __init__.py  _path_setup.py  cli.py
src/bci/board/: MANUAL.md  __init__.py  base.py  brainflow_board.py  bridge.py  stream.py  streaming.py  synthetic.py  unicorn.py
src/bci/processor/: __init__.py  base.py
src/bci/recorder/: MANUAL.md  __init__.py  base.py  fif.py
src/bci/ui/: __init__.py  cli.py
src/bci/ui/signal_monitor/: __init__.py  app.py  process.py  widgets.py
src/bci/ui/ssvep/: __init__.py  app.py  stimulus.py
src/project/: __init__.py  celery.py
src/project/examples/: board_example.py
src/visualizer/: .coveragerc  DEPRECATED.md  MANUAL.md  Modelfile  README.md  __init__.py  __main__.py  a_test.py  eeg_visualizer.py  experiment.py  live_monitor.py  live_monitor_class.py  monitor.py  process.py  pyproject.toml  requirements-dev.txt  requirements.txt  speller_config.py  standalone.py  stream_feeder.py  theme.py  visualizer.py
src/visualizer/config/: __init__.py  constants.py  exceptions.py  settings.py
src/visualizer/scripts/: _bootstrap.py  run_signal_monitor.py  run_ssvep_stimulus.py  test_board_standalone.py
src/visualizer/src/bci/: _path_setup.py
src/visualizer/src/bci/board/: __init__.py  base.py  synthetic.py
src/visualizer/src/bci/ui/: __init__.py
src/visualizer/src/bci/ui/signal_monitor/: app.py  process.py
src/visualizer/src/bci/ui/ssvep/: __init__.py  app.py  stimulus.py
src/visualizer/tests/: __init__.py  conftest.py  test_bci_board.py  test_bci_bridge.py  test_bci_recorder.py  test_bci_signal_monitor.py  test_bci_signal_monitor_process.py  test_bci_ssvep.py  test_common.py  test_conftest_coverage.py  test_eeg_visualizer_class.py  test_live_monitor_class_path.py  test_live_monitor_main.py  test_monitor.py  test_monitor_full.py  test_package_exports.py  test_process.py  test_process_extra.py  test_process_full.py  test_settings.py  test_standalone.py  test_standalone_defaults.py  test_standalone_full.py  test_stream_feeder.py  test_stream_feeder_extra.py  test_theme.py  test_unicorn_board.py
src/visualizer/utils/: common.py  gui_threading.py  gui_threadingFERC.py  speller_config.py  speller_config_3_subspeller.py  speller_config_8target.py  speller_config_9_flicker.py
