[project]
name = "bci-speller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.20"
dependencies = [
    "beeply>=1.0.2",
    "brainflow>=5.22.2",
    "mne>=1.12.1",
    "psychopy>=2026.1.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
]

[tool.uv]
package = true

[tool.uv.pip]
only-binary = ["ffpyplayer"]

[project.scripts]
bci-speller = "project:cli"

