[project]
name = "bci-speller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.20"
dependencies = [
    "beeply>=1.0.2",
    "brainflow>=5.22.2",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "mne>=1.12.1",
    "psychopy>=2026.1.3",
    "scikit-learn>=1.7.2",
    "typer>=0.26.2",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.uv]
package = true

[tool.uv.pip]
only-binary = ["ffpyplayer"]

[project.scripts]
bci-speller = "project:cli"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
]

