[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-visualizer"
version = "1.0.0"
description = "Live EEG matplotlib visualizer for BrainFlow BCI experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "matplotlib>=3.5",
    "brainflow>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
addopts = [
    "--cov",
    "--cov-config=.coveragerc",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
