[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-visualizer"
version = "1.0.0"
description = "Live EEG matplotlib visualizer for BrainFlow BCI experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "matplotlib>=3.5",
    "brainflow>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.package-dir]
visualizer = "."
bci = "src/bci"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bci*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["..", "src"]
addopts = [
    "--cov",
    "--cov-config=.coveragerc",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]
filterwarnings = [
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
